--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
       </div>
     </header>
     <!-- USED 'TABLE' CONTAINER TO CREATE A TABLE 3C X 9R TO REFLECT WORK DAY -->
-    <!-- CSS CLASSES FOR TABLES ALSO BEING USED VIA BOOTSTRAP -->
+    <!-- CSS CLASSES FOR TABLES AND BUTTONS ALSO BEING USED VIA BOOTSTRAP APIs-->
     <div class="table-container">
       <table style="width:100%" id="tb1">
         <!-- ENSURED THAT TEXT/TASK AREA IS LARGE ENOUGH FOR EVENT -->
