--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<!-- ALL SOURCE KEPT IN SINGLE FILE (index.html) GIVEN THAT ALL JS,CSS AND HTML CONSIST OF JUST OVER 200 LINES OF CODE -->
+<!-- KEPT JS SCRIPT HERE (index.html) SINCE LITTLE CODE -->
 
 <!-- CSS STYLING  -->
 <style>
